Bug 120748 - Using the mouse wheel to change tabs in the sidebar tab bar leaves the key input focus in a control that is not visible
Summary: Using the mouse wheel to change tabs in the sidebar tab bar leaves the key in...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: implementationError
Depends on:
Blocks: Sidebar
  Show dependency treegraph
 
Reported: 2018-10-21 00:13 UTC by Jim Raykowski
Modified: 2024-08-27 05:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bug demo (316.20 KB, video/mp4)
2019-02-09 08:20 UTC, Jim Raykowski
Details
Set focus to document on tabbar tab mouse wheel select (178.61 KB, video/x-matroska)
2024-08-27 00:37 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-10-21 00:13:52 UTC
Steps to reproduce in Writer:

1) Open a text document
2) Open Sidebar (Menu > View > Sidebar)
3) Click on Page deck tab
4) Click in Format panel Width spin box
5) Move mouse pointer over tab bar
6) Use mouse wheel to show a different deck

Result: Cursor is hid in Width spin box. Test this by pressing up and down keys and observing document view width change. 

Expected results: Mouse wheel does not change visible deck so focus is not hid.
Comment 1 Xisco Faulí 2019-02-07 20:41:16 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: 31d3369803ce4eceab5ef708f2cd33748b6d10ea
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Hi Jim,
Could you please try in master again ?
Comment 2 Jim Raykowski 2019-02-09 08:20:00 UTC
Created attachment 149034 [details]
bug demo

Hi Xisco, Thanks for trying to repro. 

I still reproduce using

Version: 6.3.0.0.alpha0+
Build ID: ee3cf6c82747385a1466cde66598d8e92859c904
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

I've attached a video demonstration. Notice that keyboard focus and cursor is hid in Page deck Format panel Width spin box when deck is changed to Gallery deck using mouse wheel positioned on sidebar tab bar. This allows page width to be sized using up and down arrow keys. Tab key will change hidden focus to Height spin box which can then be sized with up and down arrow keys. 

While making the video demonstration I noticed tab key navigation shows combo box outlines from Page deck on top of Gallery deck. This is due to focus still in Page deck.
Comment 3 Buovjaga 2019-02-17 18:42:22 UTC
Repro.

This started when the decks started responding to the mouse wheel (5.1).

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: e77beebb0d839f5dc0d4f9c4fd7cc9b7ccfd0175
CPU threads: 8; OS: Linux 4.20; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 16 February 2019
Comment 4 Jim Raykowski 2019-02-21 20:51:53 UTC
One way to fix this would be to revert the patch that introduced scroll wheel functionality to the sidebar tab bar.

commit 8c5e922d66d154405029380374f088cee6578056
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>, Wed Oct 28 01:58:43 2015 +0100 (3 years, 4 months ago)
Committer: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>, Wed Oct 28 02:11:58 2015 +0100 (3 years, 4 months ago)
Follows: libreoffice-5-0-branch-point
Precedes: libreoffice-5-1-branch-point
Branches: <Expand>

handle scrollwheel events in TabBar of Sidebar

- using the scrollwheel in the TabBar used to scroll the document:
  - even though the deck next to it handles scroll event on its own
  - thus there are two areas that arent even touching (separated by the
    deck) scrolling the same area
- instead, now we capture mousewheel scrolls and switch through the
  decks of the sidebar. This should also severely simplify navigating
  them.

Change-Id: Ie2136f4ec67dedf72ff6b56d16356f6a12de74ea
Comment 5 QA Administrators 2021-02-21 03:57:30 UTC Comment hidden (obsolete)
Comment 6 Jim Raykowski 2021-02-23 02:56:48 UTC
Still able to repro

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: ad5df52e03056eb5b8f5267a26a4191286342d21
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 7 stragu 2022-08-26 20:57:43 UTC
Still reproduced in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 24087697d5cf78aac346d4dcea0596373e15a95c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 8 QA Administrators 2024-08-26 03:15:40 UTC Comment hidden (obsolete)
Comment 9 Jim Raykowski 2024-08-27 00:37:37 UTC
Created attachment 196038 [details]
Set focus to document on tabbar tab mouse wheel select

Perhaps set the key input focus to the document when the mouse wheel is used to select a tab in the tab bar as shown in the attached video. Another idea is to  set the focus to the tab button selected. Either seems better than the keyboard input going to a control that is not visible.
Comment 10 stragu 2024-08-27 04:42:54 UTC
(In reply to Jim Raykowski from comment #9)
> Perhaps set the key input focus to the document when the mouse wheel is used
> to select a tab in the tab bar as shown in the attached video. Another idea
> is to  set the focus to the tab button selected. Either seems better than
> the keyboard input going to a control that is not visible.
Thanks for having a crack at it!
I think focusing the document is a good idea, as it is consistent with what happens when changing sidebar decks with a click. So I would go with the solution in the video.
Comment 11 Commit Notification 2024-08-27 05:07:24 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d80363beb10fd43045913bb4b54268b1df26737a

Resolves: tdf#120748 Using the mouse wheel to change tabs in the

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.