Resolves: tdf#120748 Using the mouse wheel to change tabs in the

sidebar tabbar leaves the key input focus in a control that is not
visible

Change-Id: I9d0b85607b660e3059c6cd528528d773bc3b8ef3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172449
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>